--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="text__ic" src="./assets/img/hiTask.png" alt="" />
       </div>
       <div class="row-header__add-task" onclick="showAddForm()">
-        <p>New task</p>
+        <p>&nbspNew task</p>
       </div>
     </div>
   </header>
